--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>modifié dans la branceh</title>
+	<title>re-modifié dans la branche auth utili</title>
 </head>
 <body>
 xvxcvxvcxvxvxcvxcvcxvvcxxc
